# Claudio-DJ

./: .env.example  .gitignore  README.md  package-lock.json  package.json  routines.md  taste.md  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/workflows/: release.yml
docs/: index.html
docs/superpowers/plans/: 2026-04-24-claudio-dj-implementation-plan.md
docs/superpowers/specs/: 2026-04-24-claudio-dj-design.md
src-server/: context.ts  index.ts  music.ts  router.ts  scheduler.ts  state.ts  tsconfig.json  tts.ts
src-server/ai/: broadcast.ts  claude.ts  index.ts  minimax.ts  qwen.ts
src-server/routes/: chat.ts  music.ts  tts.ts
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-web/: index.html  index_simple.html  main.ts  style.css
src-web/public/: manifest.json
src-web/src/: App.ts  main.ts
src-web/src/components/: BroadcastCard.ts  Controls.ts  Player.ts  StatusBar.ts
src-web/styles/: main.css
