[package]
name = "claudio-dj"
version = "0.1.0"
edition = "2021"
description = "Claudio DJ - A Tauri-based DJ application"

[lib]
name = "claudio_dj_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
env_logger = "0.11"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "time", "fs", "io-util"] }
dirs = "5"
regex = "1"
shellexpand = "3"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
